<resources>
    <string name="app_name" translatable="false">FF Settings App</string>
    <string name="fake_app_name">FF Settings</string>

    <string name="welcome_screen_title">Welcome to FF Settings App!</string>
    <string name="welcome_screen_message">Here, everyone will find a setting for themselves! However, before proceeding, it is necessary to grant some permissions for the proper functioning of the application.</string>
    <string name="privacy_policy_message">Continuing, you accept our Terms of Service and acknowledge that you have read our Privacy Policy.</string>
    <string name="continue_button">Continue</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_to_our_app">Welcome to our application!</string>
    <string name="user_name">Username</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string name="welcome_message">
        Thanks for installing our app.
        \nHere you will find the sensitivity settings for your device, and if your phone model is not among the settings, you can request them.
    </string>


    <string name="source_code_url" translatable="false">https://github.com/IbremMiner837/Garena-Free-Fire-Settings</string>
    <string name="ibragim_url" translatable="false">https://github.com/IbremMiner837</string>
    <string name="JVMFrog" translatable="false">https://vk.com/jvmfrog</string>
    <string name="GOOGLE_PLAY" translatable="false">https://play.google.com/store/apps/dev?id=8551876312630719902</string>
    <string name="google_form" translatable="false">https://forms.gle/4HcvAjPVC1ogNcRS8</string>
    <string name="email" translatable="false">ibremminer837.dev@gmail.com</string>
    <string name="crowdin" translatable="false">https://crwd.in/settings-for-free-fire-app</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-4193046598871025~2670224662</string>
    <string name="admob_interstellar_test_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstellar_ad_id" translatable="false">ca-app-pub-4193046598871025/7823313141</string>
    <string name="admob_app_open_ad_id" translatable="false">ca-app-pub-4193046598871025/7460189368</string>
    <string name="admob_app_open_test_ad_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <string name="review">General</string>
    <string name="collimator">Red Dot</string>
    <string name="x2_scope">x2 Scope</string>
    <string name="x4_scope">x4 Scope</string>
    <string name="sniper_scope">Sniper Scope</string>
    <string name="free_review">Free Look</string>
    <string name="dpi">DPI</string>
    <string name="fire_button">Fire Button</string>
    <string name="source">Source:</string>

    <string name="dont_have_your_phone_model">Don\'t have your phone model?</string>
    <string name="then_click_here">Then click here</string>
    <string name="improve_translation">Improve Translation</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="link">Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_link">Open Link</string>
    <string name="error">Error</string>

    <string name="about_app">About App</string>
    <string name="home">Home</string>
    <string name="version">Version</string>
    <string name="source_code">Source Code</string>
    <string name="ibragim">Ibragim Maltsagov</string>

    <string name="report_a_bug">Report a bug</string>
    <string name="bug_report" translatable="false">Bug Report</string>
    <string name="not_installed_email_client">E-mail client not installed</string>
    <string name="rate_the_app">Review the app</string>
    <string name="we_are_on_vk">We are on VK</string>
    <string name="other_apps">Other Apps</string>

    <string name="update_available">Update Available!</string>
    <string name="install">Install</string>
    <string name="thank_for_review">Thank for review</string>

    <!--Accessibility-->
    <string name="copy_settings_button">Copy settings button</string>

    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
    <string name="auto_theme">Auto theme</string>
    <string name="system_theme">System theme</string>
    <string name="light_theme">Light theme</string>
    <string name="night_theme">Night theme</string>
    <string name="auto_theme_description">The appearance of the application will change automatically depending on the time of sunrise and sunset</string>
    <string name="auto_level_of_charge_theme_description">The appearance of the application will change automatically depending on the level of charge of the phone</string>
    <string name="light_theme_description">Light theme selected</string>
    <string name="night_theme_description">Night theme selected</string>
    <string name="system_theme_description">The appearance of the application will change depending on the Android theme</string>
    <string name="use_dynamic_colors">Use dynamic colors</string>
    <string name="dynamic_colors_are_not_supported">Dynamic colors are not supported</string>
    <string name="devices_list">Devices list</string>
    <string name="sensitivity">Sensitivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>