<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    tools:context="com.jvmfrog.ffsettings.studio.jvmfrogsquad.ffsettings.ui.fragment.DeviceSettingsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="21dp"
    style="@style/Widget.Material3.CardView.Elevated">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDPI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:contentDescription="@string/dpi"
                android:text="@string/dpi"
                android:textSize="21sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextView"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/review_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/review"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/collimator_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/collimator"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/x2_scope_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/x2_scope"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/x4_scope_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/x4_scope"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/sniper_scope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/sniper_scope"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/free_look_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/free_review"
                app:value="58.0"
                app:enabled="false"/>

            <studio.jvmfrog.ffsettings.ui.components.CustomSliderView
                android:id="@+id/fire_button_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/fire_button"
                app:value="58.0"
                app:enabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourceButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:paddingVertical="16dp"
                android:text="@string/source"
                android:textSize="16sp"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/copyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:paddingVertical="16dp"
                android:text="@string/copy"
                android:textSize="16sp"
                style="@style/Widget.Material3.Button.TonalButton"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>